--- a/package.json
+++ b/package.json
@@ -1,20 +1,9 @@
 {
-  "name": "bug-demo",
+  "name": "web",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.1",
-    "ant-design-vue": "^1.7.3",
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
-  }
+  "workspaces": [
+    "demo1",
+    "demo2"
+  ]
 }
